--- a/public/index.html
+++ b/public/index.html
@@ -1,166 +1,82 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lead Manager</title>
+  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 </head>
-<body class="min-h-screen p-4">
-  <!-- Header -->
-  <header class="flex items-center justify-between mb-4">
-    <h1 class="text-2xl font-bold">Lead Manager</h1>
-    <div class="relative">
-      <button id="settingsBtn" class="text-xl">&#9881;</button>
-      <div id="settingsMenu" class="hidden absolute right-0 mt-2 w-52 bg-white dark:bg-gray-800 border dark:border-gray-700 rounded shadow-lg z-10">
-        <div class="px-4 py-2 font-bold border-b dark:border-gray-700">Display</div>
-        <button id="chooseColumnsBtn" class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700">Choose Columns</button>
-        <button id="themeToggle" class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700">Toggle Theme</button>
-      </div>
-    </div>
+<body class="bg-gray-50 min-h-screen flex flex-col">
+
+  <header class="bg-white shadow p-4 flex items-center">
+    <h1 class="text-2xl font-semibold text-gray-800">Lead Manager</h1>
   </header>
 
-  <!-- Lead Form -->
-  <section class="mb-6 bg-white dark:bg-gray-800 p-4 rounded shadow">
-    <h2 class="text-xl mb-4 font-semibold">Add New Lead</h2>
-    <form id="leadForm" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <input name="firstName" placeholder="First Name" required class="p-2 border dark:bg-gray-700 rounded"/>
-      <input name="lastName" placeholder="Last Last" required class="p-2 border dark:bg-gray-700 rounded"/>
-      <input name="phone" placeholder="Phone" required class="p-2 border dark:bg-gray-700 rounded"/>
-      <input name="email" placeholder="Email" type="email" required class="p-2 border dark:bg-gray-700 rounded"/>
-      <input name="tortType" placeholder="Tort Type" required class="p-2 border dark:bg-gray-700 rounded"/>
-      <button type="submit" class="col-span-1 md:col-span-2 bg-blue-600 text-white py-2 rounded">Add Lead</button>
-    </form>
-    <p id="message" class="mt-2 text-sm text-green-500"></p>
-  </section>
-
-  <!-- Lead Table -->
-  <section class="bg-white dark:bg-gray-800 p-4 rounded shadow">
-    <div class="overflow-auto">
-      <table class="min-w-full table-auto text-sm">
-        <thead>
-          <tr id="tableHead" class="bg-gray-100 dark:bg-gray-700 text-left">
-            <th class="p-2 cursor-move">First Name</th>
-            <th class="p-2 cursor-move">Last Name</th>
-            <th class="p-2 cursor-move">Phone</th>
-            <th class="p-2 cursor-move">Email</th>
-            <th class="p-2 cursor-move">Tort</th>
-            <th class="p-2 cursor-move">Status</th>
-            <th class="p-2 cursor-move">Date</th>
-            <th class="p-2">Actions</th>
+  <main class="flex-grow p-6 max-w-7xl mx-auto w-full">
+    <div class="overflow-x-auto bg-white rounded shadow">
+      <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-100">
+          <tr>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">First Name</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Last Name</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Phone</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Email</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tort</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Date</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
           </tr>
         </thead>
-        <tbody id="leadTableBody"></tbody>
+        <tbody id="leadsTableBody" class="bg-white divide-y divide-gray-200">
+          <!-- Rows added by JS -->
+        </tbody>
       </table>
     </div>
-  </section>
-
-  <!-- Choose Columns Modal -->
-  <div id="columnModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-20">
-    <div class="bg-white dark:bg-gray-800 p-6 rounded shadow-lg max-w-md w-full">
-      <h3 class="text-lg font-semibold mb-4">Choose Columns to Display</h3>
-      <div id="columnOptions" class="space-y-2">
-        <!-- JS populates checkboxes -->
-      </div>
-      <div class="mt-4 text-right">
-        <button id="closeModal" class="px-4 py-2 bg-gray-300 dark:bg-gray-700 rounded">Close</button>
-      </div>
-    </div>
-  </div>
+  </main>
 
   <script>
-    const API_URL = "https://crm-backend2-fhi5.onrender.com";
-    const columns = ["First Name", "Last Name", "Phone", "Email", "Tort", "Status", "Date"];
+    const apiBase = "https://crm-backend2-fhi5.onrender.com"; // ✅ Set correct base URL
 
-    const settingsBtn = document.getElementById("settingsBtn");
-    const settingsMenu = document.getElementById("settingsMenu");
-    settingsBtn.onclick = () => settingsMenu.classList.toggle("hidden");
-
-    // Theme toggle
-    document.getElementById("themeToggle").onclick = () => {
-      document.documentElement.classList.toggle("dark");
-    };
-
-    // Column visibility
-    const columnModal = document.getElementById("columnModal");
-    const chooseColumnsBtn = document.getElementById("chooseColumnsBtn");
-    const columnOptions = document.getElementById("columnOptions");
-    const closeModal = document.getElementById("closeModal");
-
-    chooseColumnsBtn.onclick = () => {
-      columnModal.classList.remove("hidden");
-      columnOptions.innerHTML = "";
-      document.querySelectorAll("#tableHead th").forEach((th, i) => {
-        const label = columns[i] || `Column ${i + 1}`;
-        columnOptions.innerHTML += `
-          <label class="block"><input type="checkbox" data-col="${i}" checked class="mr-2">${label}</label>`;
-      });
-    };
-    closeModal.onclick = () => columnModal.classList.add("hidden");
-    columnOptions.onchange = (e) => {
-      const col = e.target.dataset.col;
-      const display = e.target.checked ? "" : "none";
-      document.querySelectorAll(`#tableHead th:nth-child(${+col + 1}), #leadTableBody td:nth-child(${+col + 1})`)
-        .forEach(el => el.style.display = display);
-    };
-
-    // Column sorting via drag
-    new Sortable(document.getElementById("tableHead"), {
-      animation: 150,
-    });
-
-    // Add new lead
-    document.getElementById("leadForm").onsubmit = async (e) => {
-      e.preventDefault();
-      const formData = new FormData(e.target);
-      const body = {};
-      for (const [key, value] of formData.entries()) body[key] = value;
-
+    async function fetchLeads() {
       try {
-        const res = await fetch(`${API_URL}/leads`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(body),
-        });
-        const data = await res.json();
-        document.getElementById("message").textContent = data.message;
-        e.target.reset();
-        loadLeads();
-      } catch (err) {
-        console.error("Failed to create lead:", err);
-        document.getElementById("message").textContent = "Error submitting lead.";
-      }
-    };
-
-    // Load leads
-    async function loadLeads() {
-      try {
-        const res = await fetch(`${API_URL}/leads`);
+        const res = await fetch(apiBase + '/leads');
+        if (!res.ok) throw new Error('Failed to load leads');
         const leads = await res.json();
-        const tbody = document.getElementById("leadTableBody");
-        tbody.innerHTML = "";
+        const tbody = document.getElementById('leadsTableBody');
+        tbody.innerHTML = '';
+
         leads.forEach(lead => {
-          const row = document.createElement("tr");
-          row.className = "border-t border-gray-200 dark:border-gray-700 hover:bg-gray-100 dark:hover:bg-gray-800";
-          row.innerHTML = `
-            <td class="p-2">${lead.firstName}</td>
-            <td class="p-2">${lead.lastName}</td>
-            <td class="p-2">${lead.phone}</td>
-            <td class="p-2">${lead.email}</td>
-            <td class="p-2">${lead.tortType}</td>
-            <td class="p-2">${lead.status}</td>
-            <td class="p-2">${new Date(lead.createdAt).toLocaleDateString()}</td>
-            <td class="p-2 text-blue-600 cursor-pointer underline" onclick="window.open('lead-details.html?id=${lead._id}', '_blank')">View</td>
+          const tr = document.createElement('tr');
+          tr.className = "hover:bg-gray-50";
+          tr.innerHTML = `
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${lead.firstName}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${lead.lastName}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${lead.phone}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${lead.email}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${lead.tortType}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${lead.status}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${new Date(lead.createdAt).toLocaleDateString()}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
+              <button onclick="openLeadDetails('${lead._id}')" class="text-indigo-600 hover:text-indigo-900 font-semibold">
+                View Details
+              </button>
+            </td>
           `;
-          tbody.appendChild(row);
+          tbody.appendChild(tr);
         });
-      } catch (err) {
-        console.error("Failed to load leads:", err);
+      } catch (error) {
+        alert(error.message);
       }
     }
 
-    loadLeads();
+    function openLeadDetails(leadId) {
+      const url = `lead-details.html?id=${encodeURIComponent(leadId)}`;
+      window.open(url, "_blank", "width=900,height=700,resizable,scrollbars");
+    }
+
+    fetchLeads();
   </script>
+
 </body>
 </html>
