--- a/public/lead-details.html
+++ b/public/lead-details.html
@@ -4,52 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lead Details</title>
-  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 min-h-screen p-8">
 
-  <div class="max-w-3xl mx-auto bg-white p-8 rounded shadow">
+  <div class="max-w-4xl mx-auto bg-white p-8 rounded shadow">
     <h1 class="text-3xl font-bold mb-6 text-gray-800">Lead Details</h1>
 
     <dl class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6 text-gray-700">
-      <div>
-        <dt class="font-semibold">First Name</dt>
-        <dd id="firstName" class="mt-1 text-lg"></dd>
-      </div>
-      <div>
-        <dt class="font-semibold">Last Name</dt>
-        <dd id="lastName" class="mt-1 text-lg"></dd>
-      </div>
-      <div>
-        <dt class="font-semibold">Email</dt>
-        <dd id="email" class="mt-1 text-lg"></dd>
-      </div>
-      <div>
-        <dt class="font-semibold">Phone</dt>
-        <dd id="phone" class="mt-1 text-lg"></dd>
-      </div>
-      <div>
-        <dt class="font-semibold">Tort Type</dt>
-        <dd id="tortType" class="mt-1 text-lg"></dd>
-      </div>
-      <div>
-        <dt class="font-semibold">Status</dt>
-        <dd id="status" class="mt-1 text-lg"></dd>
-      </div>
-      <div>
-        <dt class="font-semibold">Created At</dt>
-        <dd id="createdAt" class="mt-1 text-lg"></dd>
-      </div>
-      <div>
-        <dt class="font-semibold">Updated At</dt>
-        <dd id="updatedAt" class="mt-1 text-lg"></dd>
-      </div>
+      <div><dt class="font-semibold">First Name</dt><dd id="firstName" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Last Name</dt><dd id="lastName" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Email</dt><dd id="email" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Phone</dt><dd id="phone" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Tort Type</dt><dd id="tortType" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Status</dt><dd id="status" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Address</dt><dd id="address" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">City</dt><dd id="city" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Zip Code</dt><dd id="zip" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Date of Birth</dt><dd id="dob" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Created At</dt><dd id="createdAt" class="mt-1 text-lg"></dd></div>
+      <div><dt class="font-semibold">Updated At</dt><dd id="updatedAt" class="mt-1 text-lg"></dd></div>
     </dl>
+
+    <div class="mt-8">
+      <h2 class="text-xl font-semibold mb-2">Verifier / QA Notes</h2>
+      <textarea id="notes" class="w-full border border-gray-300 rounded p-2 text-sm" rows="4" placeholder="Enter notes..."></textarea>
+      <button onclick="saveNotes()" class="mt-3 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
+        Save Notes
+      </button>
+    </div>
+
+    <div class="mt-8">
+      <h2 class="text-xl font-semibold mb-2">Documents</h2>
+      <ul id="documents" class="list-disc list-inside text-sm text-blue-600 space-y-1"></ul>
+    </div>
   </div>
 
   <script>
     const backendUrl = 'https://crm-backend2-fhi5.onrender.com';
+    let currentLeadId = null;
 
     function getLeadIdFromURL() {
       const params = new URLSearchParams(window.location.search);
@@ -72,6 +65,9 @@
         document.body.innerHTML = '<p class="text-red-600 font-bold text-center mt-10">Lead not found.</p>';
         return;
       }
+
+      currentLeadId = lead._id;
+
       document.getElementById('firstName').textContent = lead.firstName;
       document.getElementById('lastName').textContent = lead.lastName;
       document.getElementById('email').textContent = lead.email;
@@ -80,6 +76,39 @@
       document.getElementById('status').textContent = lead.status;
       document.getElementById('createdAt').textContent = new Date(lead.createdAt).toLocaleString();
       document.getElementById('updatedAt').textContent = new Date(lead.updatedAt).toLocaleString();
+
+      document.getElementById('address').textContent = lead.address || '';
+      document.getElementById('city').textContent = lead.city || '';
+      document.getElementById('zip').textContent = lead.zip || '';
+      document.getElementById('dob').textContent = lead.dob ? new Date(lead.dob).toLocaleDateString() : '';
+      document.getElementById('notes').value = lead.notes || '';
+
+      const docList = document.getElementById('documents');
+      docList.innerHTML = '';
+      if (Array.isArray(lead.documents)) {
+        lead.documents.forEach(doc => {
+          const li = document.createElement('li');
+          li.innerHTML = `<a href="${doc}" target="_blank" class="underline">${doc}</a>`;
+          docList.appendChild(li);
+        });
+      }
+    }
+
+    async function saveNotes() {
+      const newNotes = document.getElementById('notes').value;
+      if (!currentLeadId) return;
+
+      try {
+        const res = await fetch(`${backendUrl}/leads/${currentLeadId}`, {
+          method: 'PATCH',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ notes: newNotes })
+        });
+        if (!res.ok) throw new Error('Failed to update notes');
+        alert('Notes updated successfully');
+      } catch (err) {
+        alert(err.message);
+      }
     }
 
     window.onload = async () => {
